--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux": "^5.0.1"
