--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.0.1",
